# annotation-techniques

./: .gitignore  CMakeLists.txt  README.md
src/: AdvancedEdgeDetection.cpp  BackgroundRemoval.cpp  CannyEdgeDetection.cpp  DisplayImage.cpp  EdgeDetection.hpp
