cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage src/DisplayImage.cpp )
add_executable( BackgroundRemoval src/BackgroundRemoval.cpp )
add_executable( CannyEdgeDetection src/CannyEdgeDetection.cpp )
add_executable( AdvancedEdgeDetection src/AdvancedEdgeDetection.cpp )
target_link_libraries( AdvancedEdgeDetection ${OpenCV_LIBS} )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( BackgroundRemoval ${OpenCV_LIBS} )
target_link_libraries( CannyEdgeDetection ${OpenCV_LIBS} )